<resources>
    <string name="app_name">WhatsForDinner</string>

    <string name="ok">OK</string>
    <string name="save">SAVE</string>

    <string name="author">Author</string>
    <string name="author_value">Prashant Thombre</string>
    <string name="software">Software Version</string>
    <string name="software_version">v0.1</string>
    <string name="help">Help</string>
    <string name="help_value">https://github.com</string>
    <string name="copyright">Prashant Thombre Copyright</string>

    <string name="getmeals">Go To Meal Screen</string>
    <string name="getrecipe">Go To Recipe Screen</string>
    <string name="getGroceries">Go To Groceries Screen</string>
    <string name="getNewRecipes">Go To New Recipes Screen</string>


    <string name="meals">Meals</string>
    <string name="recipe">Recipes</string>
    <string name="Groceries">Groceries</string>
    <string name="NewRecipes">New Dish</string>

    <string name="NewRecipeName">New Recipe Name</string>
    <string name="AddIngredient">Enter Ingredient Name</string>
    <string name="Description">Description</string>

    <string name="Error_DuplicateRecipe">Recipe Name Already Exists!</string>


    <string-array name="quantity_array">
        <item>Units</item>
        <item>Pieces</item>
        <item>Pounds</item>
        <item>Gallons</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="meal_breakfast">Breakfast</string>
    <string name="meal_lunch">Lunch</string>
    <string name="meal_dinner">Dinner</string>


    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
</resources>
