<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.sjsu.prashant.whatsfordinner.MainActivity"
    android:id="@+id/wfd_banner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/wfd_banner"
        android:onClick="display_info"/>
    <ScrollView
        android:id="@+id/wfd_menuview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:id="@+id/wfd_menuitems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                >

                <ImageButton
                    android:id="@+id/image_meals"
                    android:layout_width="0dp"
                    android:layout_height="125dp"
                    android:scaleType="fitCenter"
                    android:theme="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"
                    android:src="@drawable/meals"
                    android:background="@null"
                    android:contentDescription="@string/getmeals"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:onClick="displayMealsScreen"
                    />
                <ImageButton
                    android:id="@+id/image_recipes"
                    android:layout_width="0dp"
                    android:layout_height="125dp"
                    android:scaleType="fitCenter"
                    android:theme="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"
                    android:src="@drawable/recipe"
                    android:background="@null"
                    android:contentDescription="@string/getrecipe"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:onClick="displayRecipesScreen"
                    />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:weightSum="2"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/meals" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/recipe" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                >

                <ImageButton
                    android:id="@+id/image_groceries"
                    android:layout_width="0dp"
                    android:layout_height="125dp"
                    android:scaleType="fitCenter"
                    android:theme="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"
                    android:src="@drawable/groceries"
                    android:background="@null"
                    android:contentDescription="@string/getGroceries"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:onClick="displayGroceriesScreen"
                    />
                <ImageButton
                    android:id="@+id/image_newrecipes"
                    android:layout_width="0dp"
                    android:layout_height="125dp"
                    android:scaleType="fitCenter"
                    android:theme="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"
                    android:src="@drawable/new_recipe"
                    android:background="@null"
                    android:contentDescription="@string/getNewRecipes"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:onClick="displayNewDishScreen"
                    />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:weightSum="2"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView_groceries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/Groceries" />

                <TextView
                    android:id="@+id/textView_newrecipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/NewRecipes" />
            </TableRow>

        </TableLayout>

    </ScrollView>
</LinearLayout>
