<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.sjsu.prashant.whatsfordinner.MealsActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_monday_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:text="@string/monday" />
    <LinearLayout
        android:id="@+id/ll_meal_monday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_monday_breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_breakfast" />

            <Spinner
                android:id="@+id/sp_monday_breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_monday_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_lunch" />

            <Spinner
                android:id="@+id/sp_monday_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_monday_dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_dinner" />

            <Spinner
                android:id="@+id/sp_monday_dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/tv_tuesday_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:text="@string/tuesday" />
    <LinearLayout
        android:id="@+id/ll_meal_tuesday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_tuesday_breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_breakfast" />

            <Spinner
                android:id="@+id/sp_tuesday_breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_tuesday_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_lunch" />

            <Spinner
                android:id="@+id/sp_tuesday_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_tuesday_dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_dinner" />

            <Spinner
                android:id="@+id/sp_tuesday_dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_wednesday_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:text="@string/wednesday" />
    <LinearLayout
        android:id="@+id/ll_meal_wednesday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_wednesday_breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_breakfast" />

            <Spinner
                android:id="@+id/sp_wednesday_breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_wednesday_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_lunch" />

            <Spinner
                android:id="@+id/sp_wednesday_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_wednesday_dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_dinner" />

            <Spinner
                android:id="@+id/sp_wednesday_dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_thursday_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:text="@string/thursday" />
    <LinearLayout
        android:id="@+id/ll_meal_thursday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_thursday_breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_breakfast" />

            <Spinner
                android:id="@+id/sp_thursday_breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_thursday_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_lunch" />

            <Spinner
                android:id="@+id/sp_thursday_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_thursday_dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_dinner" />

            <Spinner
                android:id="@+id/sp_thursday_dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_friday_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:text="@string/friday" />
    <LinearLayout
        android:id="@+id/ll_meal_friday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_friday_breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_breakfast" />

            <Spinner
                android:id="@+id/sp_friday_breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_friday_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_lunch" />

            <Spinner
                android:id="@+id/sp_friday_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_friday_dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_dinner" />

            <Spinner
                android:id="@+id/sp_friday_dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_saturday_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:text="@string/saturday" />
    <LinearLayout
        android:id="@+id/ll_meal_saturday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_saturday_breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_breakfast" />

            <Spinner
                android:id="@+id/sp_saturday_breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_saturday_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_lunch" />

            <Spinner
                android:id="@+id/sp_saturday_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_saturday_dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_dinner" />

            <Spinner
                android:id="@+id/sp_saturday_dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_sunday_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:text="@string/sunday" />
    <LinearLayout
        android:id="@+id/ll_meal_sunday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sunday_breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_breakfast" />

            <Spinner
                android:id="@+id/sp_sunday_breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sunday_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_lunch" />

            <Spinner
                android:id="@+id/sp_sunday_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sunday_dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meal_dinner" />

            <Spinner
                android:id="@+id/sp_sunday_dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>
